--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&family=VT323&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital@1&family=VT323&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital@1&family=Source+Sans+Pro:ital@1&family=VT323&display=swap');
 
 body {
     margin: 0;
@@ -18,8 +19,12 @@ body {
     --700-purple: #6d28d9;
     --800-purple: #5b21b6;
     --900-purple: #4c1d95;
-    --50-gray: #fafafa; 
+    --50-gray: #fafafa;
+    --300-gray: #d4d4d4;
+    --600-gray: #525252; 
     --50-cyan: #ecfeff;
+    --200-cyan: #a5f3fc;
+    --800-cyan: #155e75;
     --white: #FFFFFF;
 }
 
@@ -35,13 +40,102 @@ body {
 .header {
     grid-column: 2 / 3;
     display: grid;
+    grid-template-columns: 3fr 2fr;
+    grid-template-rows: 1fr 1fr;
     background-color: var(--600-purple);
 }
 
 
-.header-content {
+.user-account {
+    grid-column: 2 / 3;
     display: flex;
+    align-items: center;
+    margin: 10px;
+    margin-left: 25%;
+}
+
+
+.account {
+    display: flex;
+    justify-content: space-evenly;
+    font-family: 'Lato', sans-serif;
+    font-weight: bold;
+    margin-left: 5%;
+    font-size: 1.1rem;
+    width: 25%;
+    color: var(--white);
+}
+
+
+.user-account > img {
+    height: 30px;
+}
+
+
+.search-bar {
+    grid-column: 1 / 2;
+    display: flex;
+    align-items: center;
     justify-content: space-between;
+    margin: 10px;
+    width: 100%;
+}
+
+
+.search-bar > input {
+    border: 0;
+    border-radius: 25px;
+    min-width: 100px;
+    padding: 5px;
+    flex: 1;
+    box-shadow: 2px 2px var(--300-gray);
+    background-color: var(--50-gray);
+}
+
+
+.acc-welcome {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    display: flex;
+    align-items: center;
+    margin: 10px;
+    margin-left: 5%;
+}
+
+
+.welcome {
+    font-family: 'Lato', sans-serif;
+    font-weight: bold;
+    margin-left: 3%;
+    color: var(--white);
+}
+
+
+.btn-wrapper {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10%;
+}
+
+
+.btn-wrapper > button {
+    padding: 10px;
+    width: 2em;
+    border: none;
+    border-radius: 10px;
+    flex: 0.25;
+    cursor: pointer;
+    box-shadow: 3px 3px var(--800-cyan);
+    background-color: var(--200-cyan);
+}
+
+
+label > img {
+    height: 30px;
+    margin-right: 10px;
 }
 
 
@@ -95,11 +189,4 @@ a {
     font-size: 1.5rem;
     font-weight: 700;
     color: var(--white);
-}
-
-
-input {
-    border: 0;
-    border-radius: 25px;
-    background-color: var(--50-gray);
 }
