--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital@1&family=VT323&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital@1&family=Source+Sans+Pro:ital@1&family=VT323&display=swap');
 
-body {
+body, html {
     margin: 0;
-    min-height: 100vh;
+    height: 100%;
 }
 
 
@@ -21,6 +21,7 @@ body {
     --900-purple: #4c1d95;
     --50-gray: #fafafa;
     --300-gray: #d4d4d4;
+    --200-gray: #e5e5e5;
     --600-gray: #525252; 
     --50-cyan: #ecfeff;
     --200-cyan: #a5f3fc;
@@ -31,9 +32,9 @@ body {
 
 .wrapper {
     display: grid;
-    height: 100vh;
+    height: 100%;
     grid-template-columns: 1fr 5fr;
-    grid-template-rows: 1.5fr 10fr;
+    grid-template-rows: 0.5fr 1fr;
 }
 
 
@@ -41,7 +42,6 @@ body {
     grid-column: 2 / 3;
     display: grid;
     grid-template-columns: 3fr 2fr;
-    grid-template-rows: 1fr 1fr;
     background-color: var(--600-purple);
 }
 
@@ -68,6 +68,7 @@ body {
 
 
 .user-account > img {
+    cursor: pointer;
     height: 30px;
 }
 
@@ -141,14 +142,90 @@ label > img {
 
 .main {
     grid-column: 2 / 3;
+    display: grid;
+    grid-template-columns: 4fr 2fr;
+    grid-template-rows: 1fr 10fr;
     background-color: var(--50-cyan);
 }
 
 
+.cards {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    display: grid;
+    height: 100%;
+    gap: 15px;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    margin: 15px;
+    margin-top: 0;
+}
+
+
+.card {
+    display: flex;
+    flex-direction: column;
+    border-radius: 5%;
+    padding: 20px;
+    box-shadow: -5px 0px var(--600-purple);
+    background-color: var(--500-purple);
+}
+
+
+.text {
+    flex: 1;
+}
+
+
+.icon {
+    display: flex;
+    justify-content: end;
+    gap: 20px;
+}
+
+
+.para {
+    color: var(--200-gray);
+}
+
+
+.icon > img {
+    cursor: pointer;
+}
+
+
+.title {
+    font-size: 1.4rem;
+    font-weight: 700;
+    margin-bottom: 15px;
+    color: var(--50-cyan);
+}
+
+
+.heading1 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+}
+
+
+.heading2 {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+}
+
+
+.heading1, .heading2 {
+    font-family: 'Source Sans Pro', sans-serif;
+    margin: 20px;
+    font-size: 1.5rem;
+}
+
+
 .side-bar {
-    grid-row: 1 / 3;
+    grid-row: 1 / 4;
     grid-column: 1 / 2;
     display: grid;
+    height: 100%;
     grid-template-rows: 1fr 5fr 5fr;
     background-color: var(--700-purple);
 }
@@ -178,6 +255,7 @@ li {
 
 
 li > img {
+    cursor: pointer;
     height: 30px;
     margin-right: 5px;
 }
