--- a/style.css
+++ b/style.css
@@ -214,10 +214,73 @@ label > img {
 }
 
 
-.heading1, .heading2 {
+.heading1, .heading2, .heading3 {
     font-family: 'Source Sans Pro', sans-serif;
     margin: 20px;
     font-size: 1.5rem;
+}
+
+
+.container-acitivity {
+    grid-column: 2 / 3;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+}
+
+
+.announcements {
+    grid-row: 1 / 2;
+    border-radius: 15px;
+    margin: 0px 20px;
+    padding: 20px;
+    background-color: var(--500-purple);
+}
+
+
+.announce1, .announce2 {
+    box-shadow: 0px 1px var(--200-gray);
+}
+
+
+.announce2 > .title, .announce3 > .title {
+    margin-top: 15px;
+}
+
+
+.announce1 > .para, .announce2 > .para {
+    padding-bottom: 15px;
+}
+
+
+.trending {
+    grid-row: 2 / 3;
+    margin: 0 15px;
+    border-radius: 15px;
+    padding: 20px;
+    background-color: var(--500-purple);
+}
+
+
+.person {
+    display: flex;
+    align-items: center;
+}
+
+
+.name {
+    font-family: 'Source Sans Pro', sans-serif;
+    color: var(--50-gray);
+}
+
+
+.name > p {
+    margin: 0;
+}
+
+
+.text-name {
+    font-weight: 900;
+    font-size: 1.2rem;
 }
 
 
