--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body, html {
     --200-gray: #e5e5e5;
     --600-gray: #525252; 
     --50-cyan: #ecfeff;
+    --100-cyan: #cffafe;
     --200-cyan: #a5f3fc;
     --800-cyan: #155e75;
     --white: #FFFFFF;
@@ -145,7 +146,8 @@ label > img {
     display: grid;
     grid-template-columns: 4fr 2fr;
     grid-template-rows: 1fr 10fr;
-    background-color: var(--50-cyan);
+    box-shadow: 0px -5px 1px var(--700-purple);
+    background-color: var(--100-cyan);
 }
 
 
@@ -233,6 +235,7 @@ label > img {
     border-radius: 15px;
     margin: 0px 20px;
     padding: 20px;
+    box-shadow: -5px 0px var(--600-purple);
     background-color: var(--500-purple);
 }
 
@@ -257,6 +260,7 @@ label > img {
     margin: 0 15px;
     border-radius: 15px;
     padding: 20px;
+    box-shadow: -5px 0px var(--600-purple);
     background-color: var(--500-purple);
 }
 
